// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature flag screen should render FeatureFlagItem 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="feature_loan_row"
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Array [
          Object {
            "fontFamily": "MediumFont",
            "fontWeight": "500",
          },
          Object {
            "color": "rgba(0, 0, 0, 1)",
          },
        ],
      ]
    }
  >
    Decentralized Loans
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#34C759"
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 16,
          },
        ]
      }
      testID="feature_loan_switch"
      thumbTintColor="#fff"
      tintColor="rgba(120, 120, 128, 0.20)"
      value={true}
    />
  </View>
</View>
`;

exports[`feature flag screen should render FeatureFlagScreen 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
      },
    ]
  }
>
  <View>
    <View
      testID="features_flag_screen"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "color": "rgba(115, 115, 115, 1)",
                "fontFamily": "MediumFont",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 24,
              },
              Object {
                "backgroundColor": "rgba(245, 245, 245, 1)",
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
        testID="features_flag_screen_title"
        text="APP beta features"
      >
        APP beta features
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingTop": 16,
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderBottomColor": "rgba(229, 229, 229, 1)",
              "borderBottomWidth": 1,
              "borderLeftColor": "rgba(229, 229, 229, 1)",
              "borderRightColor": "rgba(229, 229, 229, 1)",
              "borderTopColor": "rgba(229, 229, 229, 1)",
            },
          ]
        }
        testID="feature_loan_row"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "MediumFont",
                  "fontWeight": "500",
                },
                Object {
                  "color": "rgba(0, 0, 0, 1)",
                },
              ],
            ]
          }
        >
          Decentralized Loans
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <RCTSwitch
            accessibilityRole="switch"
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="#34C759"
            style={
              Array [
                Object {
                  "height": 31,
                  "width": 51,
                },
                Object {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                },
              ]
            }
            testID="feature_loan_switch"
            thumbTintColor="#fff"
            tintColor="rgba(120, 120, 128, 0.20)"
            value={true}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "RegularFont",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                Object {
                  "color": "rgba(163, 163, 163, 1)",
                },
              ],
            ]
          }
        >
          Enable/disable beta features
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
